--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "caesar-cipher",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -10,11 +10,15 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "bootstrap": "^5.2.0",
+    "bootstrap-icons": "^1.9.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.54.5",
+    "ts-jest": "^28.0.8",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
   },
@@ -22,6 +26,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
+    "test:watch": "jest --watch",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -44,6 +49,8 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
-    "@types/jest": "^29.0.0"
+    "@types/jest": "^29.0.0",
+    "@types/prop-types": "^15.7.5",
+    "ts-node": "^10.9.1"
   }
 }
